karpenter/update-xvdb-snapshot-id/.kyverno-test/ec2nodeclass-existing-other-mappings.yaml
apiVersion: karpenter.k8s.aws/v1beta1
kind: EC2NodeClass
metadata:
  name: test-existing-other-mappings
  namespace: test
spec:
  blockDeviceMappings:
  - deviceName: "/dev/xvda1"
    ebs:
      volumeSize: 100Gi
      volumeType: gp3
      deleteOnTermination: true
  instanceStorePolicy: RAID0
  userData: |
    #!/bin/bash
    /etc/eks/bootstrap.sh test-cluster
