karpenter/update-xvdb-snapshot-id/.kyverno-test/ec2nodeclass-existing-xvdb-mapping.yaml
apiVersion: karpenter.k8s.aws/v1beta1
kind: EC2NodeClass
metadata:
  name: test-existing-xvdb-mapping
  namespace: test
spec:
  blockDeviceMappings:
  - deviceName: "/dev/xvda1"
    ebs:
      volumeSize: 100Gi
      volumeType: gp3
      deleteOnTermination: true
  - deviceName: "/dev/xvdb"
    ebs:
      snapshotID: "snap-oldsnapshotid123"
      volumeSize: 50Gi
      volumeType: gp2
      deleteOnTermination: true
  instanceStorePolicy: RAID0
  userData: |
    #!/bin/bash
    /etc/eks/bootstrap.sh test-cluster
