karpenter/update-xvdb-snapshot-id/.kyverno-test/ec2nodeclass-no-mappings.yaml
apiVersion: karpenter.k8s.aws/v1beta1
kind: EC2NodeClass
metadata:
  name: test-no-mappings
  namespace: test
spec:
  instanceStorePolicy: RAID0
  userData: |
    #!/bin/bash
    /etc/eks/bootstrap.sh test-cluster
